--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,4 @@ updates:
       interval: "daily"
     allow:
       - dependency-type: "direct"
-      - dependency-name: "@pulse-editor/*"
-    ignore:
-      - dependency-name: "*"
+    versioning-strategy: increase
