--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
+  "pulse-editor-marketplace": {
+    "visibility": "unlisted"
+  },
   "scripts": {
     "lint": "eslint .",
     "dev": "npm run clean && cross-env NODE_OPTIONS='--import=tsx' webpack --mode development && tsx express.ts",
@@ -14,8 +17,8 @@
   },
   "dependencies": {
     "@module-federation/enhanced": "^0.17.1",
-    "@pulse-editor/react-api": "^0.1.1-alpha.22",
-    "@pulse-editor/shared-utils": "^0.1.1-alpha.22",
+    "@pulse-editor/react-api": "^0.1.1-alpha.24",
+    "@pulse-editor/shared-utils": "^0.1.1-alpha.24",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
